# web-cw

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  alembic.ini  docker-compose.yml  pyproject.toml  student_affordability_presentation.pptx
app/: __init__.py  config.py  db.py  main.py
app/mcp/: __init__.py  security.py  server.py
app/models/: __init__.py  api_key.py  base.py  cleaned_listing.py  cost_submission_type.py  import_batch.py  moderation_status.py  raw_listing.py  submission_moderation_log.py  user_account.py  user_cost_submission.py
app/repos/: __init__.py  affordability_repo.py
app/routers/: __init__.py  affordability.py  analytics_costs.py  analytics_rent.py  auth.py  health.py  moderation.py  submissions.py
app/schemas/: analytics.py  auth.py  base.py  common.py  submissions.py
app/services/: __init__.py  api_key_auth.py  (+8 more)
docs/: API_REFERENCE.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
migrations/: env.py
scripts/: audit_accommodation_csv.py  bootstrap_db.py  create_api_key.py  export_api_docs_pdf.sh  import_accommodation_raw.py  run_local.sh  run_mcp_local.sh  seed_remote_db.sh  start.sh  test.sh  transform_raw_to_cleaned.py  verify_deployment.sh
tests/: __init__.py  conftest.py  test_affordability_logic.py  test_api_integration.py  test_app_runtime_modes.py  test_cleaning_logic.py  test_config.py  test_health.py  test_mcp_http_security.py  test_submission_protection_logic.py  test_user_auth.py
(+21 files in other folders)
